--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -10,6 +10,7 @@
     <script src="lib/vue.js"></script>
     <script src="lib/vee-validate.js"></script>
     <script src="lib/vue-resource.js"></script>
+    <script type="text/javascript" src="lib/jquery.min.js"></script>
 
     <title>AjouterFormation</title>
 </head>
@@ -126,9 +127,13 @@
                         <legend>Formation ajoutées</legend>
                     </div>
                 </div>
-                <div style="width: 100%; height: 360px; overflow-y: scroll; border: 1px solid;">
-                    <table class="fix tabnonborder">
+
+                <div style="width: 100%; height: 360px; overflow-y:hidden; border: 1px solid;" id="test">
+
+                    <table class="fix tabnonborder" >
+
                         <tbody>
+                        <tr><td><input type="button" value="Scroll" id="scroll-up" /></td></tr>
                         <tr>
                             <td v-show="isEmptyFormation()" >Aucune formation n'a été créé.</td>
                             <td>
@@ -161,13 +166,17 @@
 
                             </td>
                         </tr>
+                        <tr><td><input type="button" value="Scroll" id="scroll-down" /></td></tr>
                         </tbody>
+
                     </table>
+
                 </div>
             </div>
         </div><!--Fin row 2-->
     </div>
 </div>
 <script src="app/controller/registerTrainingTopic.js"></script>
+<script src="app/controller/scroll.js"></script>
 </body>
 </html>
