--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -16,8 +16,6 @@
 </head>
 <body>
 <div id="TrainingTopic" v-cloak>
-
-
     <div class="container-fluid">
         <div class="row"><!-- row 1-->
             <div class="col-md-12" style="padding:40px;background-color:#428bca;margin-bottom: 30px;"></div>
@@ -129,9 +127,8 @@
                 </div>
 
                 <div style="width: 100%; height: 360px; overflow-y:hidden; border: 1px solid;" id="test">
-                    <img src="css/up.png" id="scroll-up" width="20" height="20" style="position: absolute; left:50%;">
+                    <img v-show="!isEmptyFormation()" src="css/up.png" id="scroll-up" width="20" height="20" style="position: absolute; left:50%; z-index:1;">
                     <table class="fix tabnonborder" >
-
                         <tbody>
                         <tr>
                             <td v-show="isEmptyFormation()" >Aucune formation n'a été créé.</td>
@@ -166,7 +163,7 @@
                         </tr>
                         </tbody>
                     </table>
-                    <img src="css/down.png" id="scroll-down" width="20" height="20" style="position: absolute; left:50%; top:95%">
+                    <img v-show="!isEmptyFormation()" src="css/down.png" id="scroll-down" width="20" height="20" style="position: absolute; left:50%; top:95%; z-index:1;">
                 </div>
             </div>
         </div><!--Fin row 2-->
