--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,88 +25,88 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-12 col-xm-12 col-md-6 cold-lg-6 col-offset-3 col-md-offset-3">
-                            <form id="register-form" @submit.prevent="verifyForm">
+                            <form id="registr-form" @submit.prevent="verifyForm">
                                 <!-- MATRICULE-->
                                 <div class="form-group">
                                     <label for="matricule">Code de login</label>
-                                    <div class="inner-addon left-addon" :class="{'has-error': msgmatricule || !isMatriculeValid || !isNewPersonalIdNumber}">
+                                    <div class="inner-addon left-addon" :class="{'has-error': loginEmpty || !isLoginValid || !personalIdNumberAlreadyExist}">
                                         <i class="glyphicon glyphicon-th"></i>
                                         <input type="text" id="matricule" name="matricule" tabindex="1" class="form-control has-left-icon"
-                                               placeholder="ABC1234" v-model="personnalIdNumber" @focus="msgmatricule = false" @blur="messageMatricule"
+                                               placeholder="ABC1234" v-model="personnalIdNumber" @focus="loginEmpty = false" @blur="isLoginEmpty"
                                                onblur="this.placeholder = 'ABC1234' " maxlength="20" minlength="2">
-                                        <span v-show="msgmatricule" class="color-red">Code de login est obligatoire.</span>
-                                        <span v-show="!isNewPersonalIdNumber" class="color-red ">Ce code de login a déjà été enregistré.</span>
-                                        <span v-show="!isMatriculeValid && !msgmatricule" class="color-red">{{ matriculeMsg }}</span>
+                                        <span v-show="loginEmpty" class="color-red">Code de login est obligatoire.</span>
+                                        <span v-show="!personalIdNumberAlreadyExist" class="color-red ">Ce code de login a déjà été enregistré.</span>
+                                        <span v-show="!isLoginValid && !loginEmpty" class="color-red">{{ errorMessageLogin }}</span>
                                     </div>
                                 </div>
                                 <!-- NOM -->
-                                <div class="form-group" :class="{'has-error': msgnom || !isLastNameValid}">
+                                <div class="form-group" :class="{'has-error': lastNameEmpty || !isLastNameValid}">
                                     <label for="nom">Nom</label>
-                                    <div class="inner-addon left-addon"  >
+                                    <div class="inner-addon left-addon">
                                         <i class="glyphicon glyphicon-user"></i>
                                         <input type="text" name="nom" id="nom" tabindex="1" class="form-control " placeholder="DUPONT" v-model="lastName"
-                                               onfocus="this.placeholder = ''" onblur="this.placeholder = 'DUPONT'" @focus="msgnom = false" @blur="messageNom"
+                                               onfocus="this.placeholder = ''" onblur="this.placeholder = 'DUPONT'" @focus="lastNameEmpty = false" @blur="isLastNameEmpty"
                                                maxlength="125" minlength="2">
-                                        <span v-show="msgnom" class="color-red">Nom est obligatoire.</span>
-                                        <span v-show="!isLastNameValid && !msgnom" class="color-red">{{ lastNameMsg }}</span>
+                                        <span v-show="lastNameEmpty" class="color-red">Nom est obligatoire.</span>
+                                        <span v-show="!isLastNameValid && !lastNameEmpty" class="color-red">{{ errorMessageLastName }}</span>
                                     </div>
                                 </div>
                                 <!-- PRENOM -->
-                                <div class="form-group" :class="{'has-error': !isFirstNameValid || msgprenom }">
+                                <div class="form-group" :class="{'has-error': !isFirstNameValid || firstNameEmpty }">
                                     <label for="prenom">Prénom</label>
                                     <div class="inner-addon left-addon" :class="{ 'control': true }">
                                         <i class="glyphicon glyphicon-user"></i>
                                         <input type="text"  name="prenom" id="prenom" tabindex="2" class="form-control" placeholder="Eric" v-model="firstName"
-                                               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Eric'" @focus="msgprenom = false" @blur="messagePrenom"
+                                               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Eric'" @focus="firstNameEmpty = false" @blur="isFirstNameEmpty"
                                                maxlength="125" minlength="2">
-                                        <span v-show="msgprenom" class="color-red ">Prénom est obligatoire.</span>
-                                        <span v-show="!isFirstNameValid && !msgprenom" class="color-red">{{ firstNameMsg }}</span>
+                                        <span v-show="firstNameEmpty" class="color-red ">Prénom est obligatoire.</span>
+                                        <span v-show="!isFirstNameValid && !firstNameEmpty" class="color-red">{{ errorMessageFirstName }}</span>
                                     </div>
 
                                 </div>
                                 <!-- EMAIL-->
-                                <div class="form-group" :class="{'has-error':!isEmailValid || msgemail || !isNewEmail}">
+                                <div class="form-group" :class="{'has-error':!isEmailValid || emailEmpty || !emailAlreadyExist}">
                                     <label for="email">Email</label>
                                     <div class="inner-addon left-addon" :class="{ 'control': true }">
                                         <i class="glyphicon glyphicon-envelope"></i>
                                         <input type="email"  name="email" id="email" tabindex="2"  class="form-control"  placeholder="eric.dupont@viseo.com"
-                                               v-model="email" @focus="isNewEmail = true; msgemail = false"  @blur="messageEmail" onfocus="this.placeholder = ''"
+                                               v-model="email" @focus="emailAlreadyExist = true; emailEmpty = false"  @blur="isEmailEmpty" onfocus="this.placeholder = ''"
                                                onblur="this.placeholder = 'eric.dupont@viseo.com'">
-                                        <span v-show="msgemail" class="color-red ">Email est obligatoire.</span>
-                                        <span v-show="!isEmailValid && !msgemail" class="color-red">{{ emailMsg }}</span>
-                                        <span v-show="!isNewEmail" class="color-red ">Ce email a déjà été enregistré.</span>
+                                        <span v-show="emailEmpty" class="color-red ">Email est obligatoire.</span>
+                                        <span v-show="!isEmailValid && !emailEmpty" class="color-red">{{ errorMessageEmail }}</span>
+                                        <span v-show="!emailAlreadyExist" class="color-red ">Ce email a déjà été enregistré.</span>
                                     </div>
                                 </div>
                                 <!-- MOT DE PASSE -->
-                                <div class="form-group" :class="{'has-error': !isPasswordValid || msgpwd }">
+                                <div class="form-group" :class="{'has-error': !isPasswordValid || passwordEmpty }">
                                     <label for="mdp">Mot de passe</label>
                                     <div class="password" :class="{ 'control': true }">
                                         <i class="glyphicon glyphicon-lock"></i>
                                         <span @click="showPass = !showPass" v-show="!showPass && password" class="glyphicon glyphicon-eye-open"> </span>
                                         <span @click="showPass = false" v-show="showPass && password" class="glyphicon glyphicon-eye-close"> </span>
                                         <input type="password" v-model="password" v-show="!showPass" name="mdp" id="mdp" tabindex="2" class="form-control"
-                                               placeholder="••••••" onfocus="this.placeholder = ''" onblur="this.placeholder = '••••••'" @focus="msgpwd = false"
-                                               @blur="messagePwd">
+                                               placeholder="••••••" onfocus="this.placeholder = ''" onblur="this.placeholder = '••••••'" @focus="passwordEmpty = false"
+                                               @blur="isPasswordEmpty">
                                         <input type="text" v-model="password" v-show="showPass"  name="mdp" id="mdp2" tabindex="2" class="form-control"
-                                               @focus="msgpwd = false" @blur="messagePwd">
-                                        <span v-show="msgpwd"  class="color-red ">Mot de passe est obligatoire.</span>
-                                        <span v-show="!isPasswordValid && !msgpwd" class="color-red">{{ passwordMsg }}</span>
+                                               @focus="passwordEmpty = false" @blur="isPasswordEmpty">
+                                        <span v-show="passwordEmpty"  class="color-red ">Mot de passe est obligatoire.</span>
+                                        <span v-show="!isPasswordValid && !passwordEmpty" class="color-red">{{ errorMessagePassword }}</span>
                                     </div>
                                 </div>
                                 <!-- CONFIRMATION MOT DE PASSE -->
-                                <div class="form-group"   :class="{'has-error': !isConfirmPasswordValid|| msgconfirmpwd }">
+                                <div class="form-group"   :class="{'has-error': !isConfirmPasswordValid|| confirmPasswordEmpty }">
                                     <label for="mdpc">Confirmation mot de passe</label>
                                     <div class="password" :class="{ 'control': true }">
                                         <i class="glyphicon glyphicon-lock "></i>
                                         <span @click="showPassConf = !showPassConf" v-show="!showPassConf && confirmPassword" class="glyphicon glyphicon-eye-open "> </span>
                                         <span @click="showPassConf = false"  v-show="showPassConf && confirmPassword" class="glyphicon glyphicon-eye-close "> </span>
                                         <input type="password" v-model="confirmPassword"  v-show="!showPassConf" name="mdpc" id="mdpc" tabindex="2" class="form-control"
-                                               placeholder="••••••"  onfocus="this.placeholder = ''" onblur="this.placeholder = '••••••'" @focus="msgconfirmpwd = false"
-                                               @blur="messageConfirmpwd">
+                                               placeholder="••••••"  onfocus="this.placeholder = ''" onblur="this.placeholder = '••••••'" @focus="confirmPasswordEmpty = false"
+                                               @blur="isConfirmPasswordEmpty">
                                         <input type="text" v-model="confirmPassword" v-show="showPassConf" name="mdpc" id="mdpc2" tabindex="2" class="form-control"
-                                               @focus="msgconfirmpwd = false"  @blur="messageConfirmpwd">
-                                        <span v-show="msgconfirmpwd" class="color-red ">Confirmation est obligatoire.</span>
-                                        <span v-show="!isConfirmPasswordValid && !msgconfirmpwd" class="color-red">{{ confirmPasswordMsg }}</span>
+                                               @focus="confirmPasswordEmpty = false"  @blur="isConfirmPasswordEmpty">
+                                        <span v-show="confirmPasswordEmpty" class="color-red ">Confirmation est obligatoire.</span>
+                                        <span v-show="!isConfirmPasswordValid && !confirmPasswordEmpty" class="color-red">{{ errorMessageConfirmPassword }}</span>
                                     </div>
                                 </div>
                                 <div class="form-group">
