--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -9,70 +9,13 @@
     <script src="lib/vue.js"></script>
     <script src="lib/vue-resource.js"></script>
     <script type="text/javascript" src="lib/jquery.min.js"></script>
-
     <title>Gestion Formation</title>
 </head>
 <body>
 <div id="TrainingTopic" v-cloak>
-
     <blue-header></blue-header>
     <add-formation-panel></add-formation-panel>
-
-
-    <!--   <div class="container-fluid" id="addFormation">
-           <div class="row" >&lt;!&ndash; row 1&ndash;&gt;
-               <div class="col-md-12 col-lg-12 col-sm-12" style="padding:10px;"></div>
-               <div class="col-sm-12 col-md-10 col-lg-7">
-
-                   <div class="row">
-
-                       <div class="col-lg-7 col-md-7 text-center">
-                           <legend>Formation ajoutées</legend>
-                       </div>
-                   </div>
-
-                   <div style="width: 100%; height: 360px; overflow-y:hidden; border: 1px solid;" id="test">
-                       <img v-show="!showChevrons()" src="css/up.png" id="scroll-up" width="20" height="20" style="position: absolute; left:50%; z-index:1;">
-                       <table class="fix tabnonborder" >
-                           <tbody>
-                           <tr>
-                               <td v-show="showChevrons()" >Aucune formation n'a été créé.</td>
-                               <td>
-                                   <template v-for="grandgroup in allTopicTraining">
-                                       <table class="table table-borderless tabnonborder fix">
-                                           <div class="row">
-                                               <thead>
-                                               <tr>
-                                                   <th class="col-lg-3 col-md-3">{{grandgroup[0][0].topicDescription.name}}</th>
-                                                   <th class="col-lg-3 col-md-3"></th>
-                                                   <th class="col-lg-3 col-md-3"></th>
-                                                   <th class="col-lg-3 col-md-3 deletetopic"><a href="#" class="changecolor"><span class="glyphicon glyphicon-trash"></span> Supprimer ce thème</a></th>
-                                               </tr>
-                                               </thead>
-                                           </div>
-
-                                           <div class="row">
-                                               <tbody>
-                                               <tr v-for="group in grandgroup">
-                                                   <td class="col-lg-3 col-md-3" v-for="training in group">
-                                                       <button class="btn btn-toolbar btn-group">{{training.trainingTitle}}</button>
-                                                   </td>
-                                               </tr>
-                                               </tbody>
-                                           </div>
-
-                                           </tr>
-                                       </table>
-                                   </template>
-                               </td>
-                           </tr>
-                           </tbody>
-                       </table>
-                       <img v-show="!showChevrons()" src="css/down.png" id="scroll-down" width="20" height="20" style="position: absolute; left:50%; top:95%; z-index:1;">
-                   </div>
-               </div>
-           </div>&lt;!&ndash;Fin row 2&ndash;&gt;
-       </div>-->
+    <show-formation-panel></show-formation-panel>
 </div>
 <script src="app/controller/registerTrainingTopic.js"></script>
 <script src="app/controller/scroll.js"></script>
