--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,16 +13,7 @@
     <div class="row">
         <div class="col-md-12" style="padding:40px;background-color:#428bca;margin-bottom: 30px;"></div>
         <div class="col-lg-8 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-lg-offset-3  col-md-offset-3">
-            <div class="panel panel-default">
-                <navigation-menu></navigation-menu>
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-xs-12 col-xm-12 col-md-6 cold-lg-6 col-offset-3 col-md-offset-3">
-                            <formulaire></formulaire>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <connect-user></connect-user>
         </div>
     </div>
 </div>
