--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -12,12 +12,13 @@
     <title>Gestion Formation</title>
 </head>
 <body>
-<div id="TrainingTopic" v-cloak>
+<div id="newVue" v-cloak>
     <blue-header></blue-header>
     <add-formation-panel></add-formation-panel>
     <show-formation-panel></show-formation-panel>
 </div>
 <script src="app/controller/registerTrainingTopic.js"></script>
 <script src="app/controller/scroll.js"></script>
+<script src="app/controller/main.js"></script>
 </body>
 </html>
