--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
     <script src="lib/vue-resource.js"></script>
 </head>
 <body>
-<div class="container-fluid" id="app" v-cloak>
+<div class="container-fluid" id="newVue" v-cloak>
     <div class="row">
         <div class="col-md-12" style="padding:40px;background-color:#428bca;margin-bottom: 30px;"></div>
         <div class="col-lg-8 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-lg-offset-3  col-md-offset-3">
@@ -27,5 +27,6 @@
     </div>
 </div>
 <script src="app/controller/registerCollaborator.js"></script>
+<script src="app/controller/main.js"></script>
 </body>
 </html>
