--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,12 +9,11 @@
     <script src="lib/vue-resource.js"></script>
 </head>
 <body>
-<div class="container-fluid" id="newVue" v-cloak>
-    <div class="row">
-        <div class="col-md-12" style="padding:30px;background-color:#428bca;margin-bottom: 20px;"></div>
-        <div class="col-lg-8 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-lg-offset-3  col-md-offset-3">
+<div id="newVue" v-cloak>
+    <blue-header></blue-header>
+    <div id="connectUser" class="container-fluid">
             <connect-user></connect-user>
-        </div>
+    </div>
     </div>
 </div>
 <script src="app/controller/registerCollaborator.js"></script>
