--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <title>Enregistrement collaborateur</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/signInSignUp.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="lib/vue.js"></script>
     <script src="lib/vue-resource.js"></script>
 </head>
