--- a/src/main/webapp/registerTrainingCollaborator.html
+++ b/src/main/webapp/registerTrainingCollaborator.html
@@ -2,24 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Enregistrement collaborateur</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="lib/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/signInSignUp.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/registerTrainingCollaborator.css">
     <script src="lib/vue.js"></script>
     <script src="lib/vue-resource.js"></script>
+    <script type="text/javascript" src="lib/jquery.min.js"></script>
     <script src="lib/jwt-decode.js"></script>
+    <title>Gestion Formation</title>
 </head>
 <body>
 <div id="newVue" v-cloak>
     <blue-header></blue-header>
-    <div id="connectUser" class="container-fluid">
-            <connect-user></connect-user>
-    </div>
+    <collaborator-formation></collaborator-formation>
 </div>
-</div>
-<script src="app/controller/registerCollaborator.js"></script>
+<script src="app/controller/scroll.js"></script>
+<script src="app/controller/registerTrainingCollaborator.js"></script>
 <script src="app/controller/main.js"></script>
 </body>
 </html>
