--- a/src/main/webapp/registerTrainingCollaborator.html
+++ b/src/main/webapp/registerTrainingCollaborator.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/registerTrainingCollaborator.css">
     <script src="lib/vue.js"></script>
+    <script src="lib/vue-strap.js"></script>
     <script src="lib/vue-resource.js"></script>
     <script type="text/javascript" src="lib/jquery.min.js"></script>
     <script src="lib/jwt-decode.js"></script>
